force-app/main/default/objects/Make_Up_Class__c/Make_Up_Class__c.object-meta.xml
<CustomObject>
    <label>Make Up Class</label>
    <nameField>
        <displayFormat>MKC{00000}</displayFormat>
        <label>Make Up Class  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Make Up Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>