force-app/main/default/objects/Make_Up_Class__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Id</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Make Up Classes</relationshipLabel>
    <relationshipName>Make_Up_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>