force-app/main/default/objects/Make_Up_Class__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mon</fullName>
            </value>
            <value>
                <fullName>Tue</fullName>
            </value>
            <value>
                <fullName>Wed</fullName>
            </value>
            <value>
                <fullName>Thur</fullName>
            </value>
            <value>
                <fullName>Fri</fullName>
            </value>
            <value>
                <fullName>Sat</fullName>
            </value>
            <value>
                <fullName>Sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>