force-app/main/default/objects/Make_Up_Class__c/fields/Facility1__c.field-meta.xml
<CustomField>
    <fullName>Facility1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Make Up Classes</relationshipLabel>
    <relationshipName>Make_Up_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>