force-app/main/default/objects/Make_Up_Class__c/fields/Roster_Name__c.field-meta.xml
<CustomField>
    <fullName>Roster_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roster Name</label>
    <referenceTo>Roaster__c</referenceTo>
    <relationshipLabel>Make Up Classes</relationshipLabel>
    <relationshipName>Make_Up_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>